force-app/main/default/objects/Country__c/Country__c.object-meta.xml
<CustomObject>
    <description>List of all countries and mapping to sales people. Used to automatically assign Accounts when created by OnDemand Service (ISA).</description>
    <label>Country</label>
    <nameField>
        <label>Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>