force-app/main/default/objects/Country__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <inlineHelpText>Area as defined for MIS reporting.</inlineHelpText>
    <label>Area</label>
    <length>20</length>
    <type>Text</type>
</CustomField>