force-app/main/default/objects/Country__c/fields/Calling_Code__c.field-meta.xml
<CustomField>
    <fullName>Calling_Code__c</fullName>
    <label>Calling Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>