force-app/main/default/objects/Country__c/fields/ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>ISO_Code__c</fullName>
    <label>ISO Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>