force-app/main/default/objects/Country__c/fields/uB_Office__c.field-meta.xml
<CustomField>
    <fullName>uB_Office__c</fullName>
    <label>uB Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>