force-app/main/default/objects/Country__c/listViews/All_Countries.listView-meta.xml
<ListView>
    <fullName>All_Countries</fullName>
    <columns>NAME</columns>
    <columns>ISO_Code__c</columns>
    <columns>State__c</columns>
    <columns>State_Code__c</columns>
    <columns>uB_Office__c</columns>
    <columns>Continent__c</columns>
    <columns>Calling_Code__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Countries</label>
</ListView>